Adaption of Model, Reports and Usersories, Fetaures implemented. Problems with view of USerstories (only memoryaddress is shown, not the story information .

--- a/DailyStatusReport/src/view/MainReport.fxml
+++ b/DailyStatusReport/src/view/MainReport.fxml
@@ -23,15 +23,15 @@
       <ChoiceBox fx:id="cbEntity" layoutX="131.0" layoutY="239.0" prefWidth="150.0" />
       <Label layoutX="52.0" layoutY="243.0" text="Entity" />
       <ChoiceBox fx:id="cbStatus" layoutX="131.0" layoutY="277.0" prefWidth="150.0" />
-      <Label layoutX="53.0" layoutY="282.0" text="Status" />
+      <Label layoutX="52.0" layoutY="282.0" text="Status" />
       <Label layoutX="52.0" layoutY="319.0" text="Total TC" />
       <TextField fx:id="tbTotalTc" layoutX="131.0" layoutY="315.0" prefHeight="25.0" prefWidth="44.0" />
       <TextField fx:id="tbPass" layoutX="131.0" layoutY="351.0" prefHeight="25.0" prefWidth="44.0" />
       <Label layoutX="52.0" layoutY="355.0" text="Pass" />
       <TextField fx:id="tbFailed" layoutX="131.0" layoutY="383.0" prefHeight="25.0" prefWidth="44.0" />
       <Label layoutX="52.0" layoutY="387.0" text="Failed" />
-      <TextField fx:id="tbBlocked" layoutX="132.0" layoutY="416.0" prefHeight="25.0" prefWidth="44.0" />
-      <Label layoutX="53.0" layoutY="420.0" text="Blocked" />
+      <TextField fx:id="tbBlocked" layoutX="131.0" layoutY="416.0" prefHeight="25.0" prefWidth="44.0" />
+      <Label layoutX="52.0" layoutY="420.0" text="Blocked" />
       <TextField fx:id="tbNoRun" layoutX="237.0" layoutY="315.0" prefHeight="25.0" prefWidth="44.0" />
       <TextField fx:id="tbDefer" layoutX="237.0" layoutY="351.0" prefHeight="25.0" prefWidth="44.0" />
       <TextField fx:id="tbExePerc" layoutX="237.0" layoutY="383.0" prefHeight="25.0" prefWidth="44.0" />
@@ -42,8 +42,8 @@
       <Label layoutX="199.0" layoutY="420.0" text="Pass %" />
       <Label layoutX="54.0" layoutY="453.0" text="Outstanding Defects" />
       <TextField fx:id="tbOutstandDef" layoutX="52.0" layoutY="474.0" prefHeight="25.0" prefWidth="232.0" />
-      <TextField layoutX="52.0" layoutY="523.0" prefHeight="25.0" prefWidth="232.0" />
       <Label layoutX="53.0" layoutY="503.0" text="Comments" />
+      <TextField fx:id="tbComments" layoutX="52.0" layoutY="523.0" prefHeight="25.0" prefWidth="232.0" />
       <Separator layoutX="53.0" layoutY="183.0" prefHeight="5.0" prefWidth="461.0" />
       <Label fx:id="lbReportId" layoutX="303.0" layoutY="52.0" text="ReportID" />
       <ListView fx:id="lvHighlights" layoutX="536.0" layoutY="24.0" prefHeight="74.0" prefWidth="294.0" />
