--- a/DailyStatusReport/bin/view/MainReport.fxml
+++ b/DailyStatusReport/bin/view/MainReport.fxml
@@ -67,7 +67,7 @@
                         <ListView fx:id="lvHighlights" layoutX="42.0" layoutY="62.0" prefHeight="74.0" prefWidth="294.0" />
                         <Button fx:id="btGenerateReport" layoutX="347.0" layoutY="549.0" mnemonicParsing="false" onAction="#generateReport" prefHeight="25.0" prefWidth="301.0" text="Generate Report" textFill="#4fd77e" />
                         <Separator layoutX="17.0" layoutY="178.0" prefHeight="5.0" prefWidth="751.0" />
-                        <ListView fx:id="lvUserstory" layoutX="271.0" layoutY="190.0" prefHeight="317.0" prefWidth="457.0" />
+                        <ListView fx:id="lvUserstories" layoutX="271.0" layoutY="190.0" prefHeight="317.0" prefWidth="457.0" />
                      </children>
                   </AnchorPane>
             </content>
