--- a/DailyStatusReport/src/view/MainReport.fxml
+++ b/DailyStatusReport/src/view/MainReport.fxml
@@ -11,7 +11,7 @@
    <children>
       <TabPane layoutX="-3.0" layoutY="28.0" prefHeight="645.0" prefWidth="845.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
-          <Tab text="Userstory Files">
+          <Tab text="Read from Files">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -90,9 +90,9 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <DatePicker fx:id="dpWeek" layoutX="24.0" layoutY="50.0" />
-                        <ListView fx:id="lvWeeklyReport" layoutX="232.0" layoutY="42.0" prefHeight="533.0" prefWidth="471.0" />
                         <ChoiceBox fx:id="cbEntitiyRep" layoutX="24.0" layoutY="106.0" prefWidth="150.0" />
                         <Button fx:id="btReadReportData" layoutX="24.0" layoutY="169.0" mnemonicParsing="false" onAction="#readReportData" prefHeight="25.0" prefWidth="142.0" text="Read Report Data" />
+                        <ListView fx:id="lvWeeklyReport" layoutX="223.0" layoutY="50.0" prefHeight="541.0" prefWidth="495.0" />
                      </children>
                   </AnchorPane>
               </content>
